Updated styling, fixed scrollbar displacement and Profile not updating properly

--- a/phase1/src/components/SideBar.css
+++ b/phase1/src/components/SideBar.css
@@ -12,8 +12,11 @@
 
 .profileLink .active,
 .profileLink > a:hover {
-	transform: var(--scale-transform);
 	color: var(--primary-highlight-color);
+}
+
+.profileLink > a:hover {
+	transform: var(--scale-transform);
 }
 
 .profileLink .active .image,
@@ -54,8 +57,8 @@
 .profileLink .iconLink {
 	display: flex;
 	align-items: center;
-	padding: 0.25rem;
-	margin: -0.25rem;
+	padding: 0.25rem 0.75rem;
+	margin: -0.25rem -0.75rem;
 	margin-left: auto;
 	cursor: pointer;
 	
@@ -74,4 +77,14 @@
 
 .profileLink .iconLink:hover svg.icon {
 	transform: scale(1.15);
+}
+
+.profileLink button {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
 }
