--- a/phase1/src/pages/Layout.css
+++ b/phase1/src/pages/Layout.css
@@ -1,4 +1,5 @@
 div.layout {
+	/* padding-right: calc(100vw - 100%); */
 	max-width: 1920px;
 	margin: 0 auto;
 	display: flex;
@@ -86,10 +87,11 @@ div.groupContainer img {
 }
 
 div.mainContent {
-	flex-basis: 50%;
+	width: 100%;
 	max-width: 767px;
 	margin: 2rem;
 	margin-top: var(--outer-sidebar-padding);
+	margin-right: calc(-1 * (100vw - 100%));
 }
 
 div.complementary {
@@ -99,6 +101,7 @@ div.complementary {
 	width: 275px;
 	flex-shrink: 0;
 	padding: var(--outer-sidebar-padding);
+	margin-right: calc(-1 * (100vw - 100%));
 }
 
 /* @media (min-width: 2560px) {
